--- a/index.html
+++ b/index.html
@@ -38,20 +38,27 @@
                             <!-- Post title-->
                             <h1 class="fw-bolder mb-1">The 41 Bistro</h1>
                             <!-- Post meta content-->
-                            <div class="text-muted fst-italic mb-2">Posted on June 11, 2021</div>
+                            <div class="text-muted fst-italic mb-2">餐酒館 · Bistro</div>
                             <!-- Post categories-->
                         </header>
                         <!-- Preview image figure-->
                         <figure class="mb-4"><img class="img-fluid rounded mb-4 mb-lg-0" src="assets/1.jpg" alt="..." /></figure>
                         <!-- Post content-->
                         <section class="mb-5">
-                            <p class="fs-5 mb-4">Science is an enterprise that should be cherished as an activity of the free human mind. Because it transforms who we are, how we live, and it gives us an understanding of our place in the universe.</p>
-                            <p class="fs-5 mb-4">The universe is large and old, and the ingredients for life as we know it are everywhere, so there's no reason to think that Earth would be unique in that regard. Whether of not the life became intelligent is a different question, and we'll see if we find that.</p>
-                            <p class="fs-5 mb-4">If you get asteroids about a kilometer in size, those are large enough and carry enough energy into our system to disrupt transportation, communication, the food chains, and that can be a really bad day on Earth.</p>
-                            <h2 class="fw-bolder mb-4 mt-5">I have odd cosmic thoughts every day</h2>
-                            <p class="fs-5 mb-4">For me, the most fascinating interface is Twitter. I have odd cosmic thoughts every day and I realized I could hold them to myself or share them with people who might be interested.</p>
-                            <p class="fs-5 mb-4">Venus has a runaway greenhouse effect. I kind of want to know what happened there because we're twirling knobs here on Earth without knowing the consequences of it. Mars once had running water. It's bone dry today. Something bad happened there as well.</p>
-                        </section>
+						    <p> </p>
+							<p>「定格餐酒DinggeBistro」距離捷運永安市場站步行3分鐘即可抵達。
+							   店家的外觀，生在巷弄中雖然不是非常寬敞，以大量的的綠色植物包覆外圍，感覺很有氣氛，大片的玻璃 可以直接看到店內，減少了距離感 。
+							   側面的店家外觀，店家招牌使用暗色的底，金黃色的字，帶有強烈又有微微 優雅感。</p>
+							<div><img class="img-fluid rounded mb-4 mb-lg-0" src="assets/5.jpg" alt="..." width=800 /></div>
+							<p> </p>
+							<p>店內中西合併的裝潢，一進門的右手邊是店家刻意設計的招牌角落，使用各種裝飾品有點歐式的風格，搭配大型的中國字店名，朔造了特別的衝突感，再往前一點是高腳椅的座位區，牆上擺著許多店家刻意挑選的創意畫作。
+							   一進門的左手邊，就是座位區 ，靠牆的座位放上圖騰抱枕和黃光製造一點鄉村的風格，再往內走一些就是櫃檯和吧台，櫃檯上也擺放了很多很有特色的裝飾，吧台前的酒櫃上，滿滿的酒中，還放了植物裝飾。</p>
+							<div><img class="img-fluid rounded mb-4 mb-lg-0" src="assets/7.jpeg" alt="..." width=800 /></div>
+		                    <p> </p>
+							<p>中西合併的餐點，非常的適合配酒，調酒味道適中不嗆喉，外觀也很美麗，餐點、菜色擺盤、份量、口味都讓人十分驚艷，比起一般美式餐酒館提供的餐點更多樣，餐點口味不容易膩口。
+							   調酒部分可以將自己喜歡的酒類口感和喜好告訴店員，店員會很親切的介紹。定格餐酒DinggeBistro，店內除了有很棒的氣氛、美味的餐點和酒，最重要的是連店員都相當親切，在食用前端上毛豆招待客人，還有在用餐完畢後贈送Shot，讓人在這裡有個放鬆愉快的夜晚。
+							   適合下班後想小酌或是與朋友聚餐狂歡的你!</p>
+					   </section>
                     </article>
                     <!-- Comments section-->
                     <section class="mb-5">
@@ -65,10 +72,20 @@
                                         <div class="fw-bold">店家資訊</div>
 										<!-- Child comment 1-->
                                         <div class="d-flex mt-4">
+                                            <div class="flex-shrink-0"><img src="assets/FB.svg" alt="lacation" width="40" height="40"></div>
+                                            <div class="ms-3">
+                                                <div class="fw-bold">網站</div>
+                                                The 41 Bistro →
+												<a href="https://www.facebook.com/the41bistro/menu/?ref=page_internal" target="_blank" rel="noopener noreferrer">fb粉專</a>
+                                            </div>
+                                        </div>
+										<!-- Child comment 1-->
+                                        <div class="d-flex mt-4">
                                             <div class="flex-shrink-0"><img src="assets/location.svg" alt="lacation" width="40" height="40"></div>
                                             <div class="ms-3">
                                                 <div class="fw-bold">地址</div>
-                                                --地址--                                            
+                                                新北市永和區得和路41號 →   
+                                                <a href="https://www.google.com/maps/place/The+41+Bistro+%E8%8B%B1%E5%BC%8F%E9%A4%90%E9%85%92%E9%A4%A8+%E9%A4%90%E5%BB%B3+%E9%85%92%E5%90%A7+%E7%94%9F%E5%95%A4+%E6%B0%B8%E5%92%8C%E7%BE%8E%E9%A3%9F+%E4%B8%AD%E5%92%8C%E7%BE%8E%E9%A3%9F+Bar+Draft/@25.0001928,121.5140883,17z/data=!3m1!4b1!4m5!3m4!1s0x3442a9e0d19b0393:0x26f8830c2c00db88!8m2!3d25.000188!4d121.516277">地圖</a>												
 											</div>
                                         </div>
 									    <!-- Child comment 2-->
@@ -76,7 +93,7 @@
                                         <div class="flex-shrink-0"><img src="assets/phone-call.svg" alt="call" width="40" height="40"></div>
                                         <div class="ms-3">
                                             <div class="fw-bold">電話</div>
-                                            --電話-- 
+                                             02 2921 8018 
                                         </div>
                                     </div>
                                         <!-- Child comment 3-->
@@ -92,7 +109,7 @@
                                             <div class="flex-shrink-0"><img src="assets/money.svg" alt="cost" width="40" height="40"></div>
                                             <div class="ms-3">
                                                 <div class="fw-bold">消費事項</div>
-                                                --消費--
+                                                dd
                                             </div>
                                         </div>
                                     </div>
@@ -102,7 +119,7 @@
                                     <div class="flex-shrink-0"><img src="assets/warning.svg" alt="warning" width="50" height="50"></div>
                                     <div class="ms-3">
                                         <div class="fw-bold">注意!!!</div>
-                                        --注意--
+                                        &#127867喝酒不開車，開車不喝酒&#128663
                                     </div>
                                 </div>
                             </div>
@@ -127,13 +144,13 @@
                             <div class="row">
                                 <div class="col-sm-6">
                                     <ul class="list-unstyled mb-0">
-                                        <li><a href="https://www.google.com/maps/place/The+41+Bistro+%E8%8B%B1%E5%BC%8F%E9%A4%90%E9%85%92%E9%A4%A8+%E9%A4%90%E5%BB%B3+%E9%85%92%E5%90%A7+%E7%94%9F%E5%95%A4+%E6%B0%B8%E5%92%8C%E7%BE%8E%E9%A3%9F+%E4%B8%AD%E5%92%8C%E7%BE%8E%E9%A3%9F+Bar+Draft/@25.0001928,121.5140883,17z/data=!3m1!4b1!4m5!3m4!1s0x3442a9e0d19b0393:0x26f8830c2c00db88!8m2!3d25.000188!4d121.516277">行車路線</a></li>
+                                        <li></li>
                                         <li><a href="">點餐</a></li>
 									</ul>
                                 </div>
 								<div class="col-sm-6">
                                     <ul class="list-unstyled mb-0">
-                                        <li><a href="https://www.facebook.com/the41bistro/menu/?ref=page_internal">網站</a></li>
+                                        <li><a href="">網站</a></li>
 										<li><a href="">致電</a></li>
                                     </ul>
                                 </div>
@@ -143,7 +160,8 @@
                     <!-- Side widget-->
                     <div class="card mb-4">
                         <div class="card-header">Side Widget</div>
-                        <div class="card-body">鄰近永安市場站
+						<div><img class="img-fluid rounded mb-4 mb-lg-0" src="assets/1.png" alt="..." /></div>
+                        <div class="card-body">鄰近捷運永安市場站
 						<a class="btn btn-primary" href="https://www.metro.taipei/cp.aspx?n=ECEADC266D7120A7">乘車時間</a></div>
                     </div>
                 </div>
