--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             <!-- Post title-->
                             <h1 class="fw-bolder mb-1">The 41 Bistro</h1>
                             <!-- Post meta content-->
-                            <div class="text-muted fst-italic mb-2">餐酒館 · Bistro</div>
+                            <div class="text-muted fst-italic mb-2">餐酒館 · 英式</div>
                             <!-- Post categories-->
                         </header>
                         <!-- Preview image figure-->
@@ -46,18 +46,13 @@
                         <!-- Post content-->
                         <section class="mb-5">
 						    <p> </p>
-							<p>「定格餐酒DinggeBistro」距離捷運永安市場站步行3分鐘即可抵達。
-							   店家的外觀，生在巷弄中雖然不是非常寬敞，以大量的的綠色植物包覆外圍，感覺很有氣氛，大片的玻璃 可以直接看到店內，減少了距離感 。
-							   側面的店家外觀，店家招牌使用暗色的底，金黃色的字，帶有強烈又有微微 優雅感。</p>
+							<p>「微微 優雅感。</p>
 							<div><img class="img-fluid rounded mb-4 mb-lg-0" src="assets/5.jpg" alt="..." width=800 /></div>
 							<p> </p>
-							<p>店內中西合併的裝潢，一進門的右手邊是店家刻意設計的招牌角落，使用各種裝飾品有點歐式的風格，搭配大型的中國字店名，朔造了特別的衝突感，再往前一點是高腳椅的座位區，牆上擺著許多店家刻意挑選的創意畫作。
-							   一進門的左手邊，就是座位區 ，靠牆的座位放上圖騰抱枕和黃光製造一點鄉村的風格，再往內走一些就是櫃檯和吧台，櫃檯上也擺放了很多很有特色的裝飾，吧台前的酒櫃上，滿滿的酒中，還放了植物裝飾。</p>
+							<p>店內鄉村的風格還放了植物裝飾。</p>
 							<div><img class="img-fluid rounded mb-4 mb-lg-0" src="assets/7.jpeg" alt="..." width=800 /></div>
 		                    <p> </p>
-							<p>中西合併的餐點，非常的適合配酒，調酒味道適中不嗆喉，外觀也很美麗，餐點、菜色擺盤、份量、口味都讓人十分驚艷，比起一般美式餐酒館提供的餐點更多樣，餐點口味不容易膩口。
-							   調酒部分可以將自己喜歡的酒類口感和喜好告訴店員，店員會很親切的介紹。定格餐酒DinggeBistro，店內除了有很棒的氣氛、美味的餐點和酒，最重要的是連店員都相當親切，在食用前端上毛豆招待客人，還有在用餐完畢後贈送Shot，讓人在這裡有個放鬆愉快的夜晚。
-							   適合下班後想小酌或是與朋友聚餐狂歡的你!</p>
+							<p>中西合併的餐你!</p>
 					   </section>
                     </article>
                     <!-- Comments section-->
