--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                             <div class="flex-shrink-0"><img src="assets/clock.svg" alt="clock" width="40" height="40"></div>
                                             <div class="ms-3">
                                                 <div class="fw-bold">營業時間</div>
-                                                --時段--
+                                                18:30-01:00 
                                             </div>
                                         </div>
 										<!-- Child comment 4-->
@@ -104,7 +104,7 @@
                                             <div class="flex-shrink-0"><img src="assets/money.svg" alt="cost" width="40" height="40"></div>
                                             <div class="ms-3">
                                                 <div class="fw-bold">消費事項</div>
-                                                dd
+                                                每人低消80元｜無服務費
                                             </div>
                                         </div>
                                     </div>
