--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                             <div class="flex-shrink-0"><img src="assets/money.svg" alt="cost" width="40" height="40"></div>
                                             <div class="ms-3">
                                                 <div class="fw-bold">消費事項</div>
-                                                每人低消80元｜無服務費
+                                                每人低消80元｜無服務費｜無用餐限制
                                             </div>
                                         </div>
                                     </div>
