--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
                             <!-- Post categories-->
                         </header>
                         <!-- Preview image figure-->
-                        <figure class="mb-4"><img class="img-fluid rounded mb-4 mb-lg-0" src="assets/1.jpg" alt="..." /></figure>
+                        <figure class="mb-4"><img class="img-fluid rounded mb-4 mb-lg-0" src="assets/2.jpg" alt="..." /></figure>
                         <!-- Post content-->
                         <section class="mb-5">
 						    <p> </p>
 							<p>「The 41 Bistro」距離捷運永安市場步行10分鐘即可抵達。佇立在街角的The 41 Bistro店面不大，門口的低調小招牌，外觀十足英倫小酒吧風格。
 							    另外每週固定都有邀請樂手前來現場演唱表演，在這溫暖的空間，營造相當好的氣氛。</p>
-							<div><img class="img-fluid rounded mb-4 mb-lg-0" src="assets/5.jpg" alt="..." width=800 /></div>
+							<div><img class="img-fluid rounded mb-4 mb-lg-0" src="assets/3.jpg" alt="..." width=800 /></div>
 							<p> </p>
-							<p>The 41 bistro可是道地的英式酒吧，提供各國精釀啤酒，除了有國外的知名精釀啤酒品牌之外，The 41 也有提供台灣本土頗為知名的精釀啤酒以及調酒。
+							<p>The 41 bistro可是道地的英式酒吧，提供各國精釀啤酒，除了有國外的知名精釀啤酒品牌之外，The 41 bistro也有提供台灣本土頗為知名的精釀啤酒以及調酒。
 							   來The 41 Bistro喝酒，每天都有優惠，記得點酒之前先check一下酒單!</p>
-							<div><img class="img-fluid rounded mb-4 mb-lg-0" src="assets/7.jpeg" alt="..." width=800 /></div>
+							<div><img class="img-fluid rounded mb-4 mb-lg-0" src="assets/4.jpeg" alt="..." width=800 /></div>
 		                    <p> </p>
 							<p>The 41 Bistro 除了各式啤酒和調酒之外，道地的英國餐點，現做英式風味下酒美食，也很有水準，各式下酒菜滋味都很讚，可以沉浸在充滿英式氛圍中體驗到道地的餐點，是個不錯的選擇呢!</p>
 					   </section>
