--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                             <div class="ms-3">
                                                 <div class="fw-bold">網站</div>
                                                 The 41 Bistro →
-												<a href="https://www.facebook.com/the41bistro/menu/?ref=page_internal" target="_blank" rel="noopener noreferrer">fb粉專</a>
+												<a href="https://www.facebook.com/the41bistro/menu/?ref=page_internal" target="_blank" rel="noopener noreferrer">FB粉專</a>
                                             </div>
                                         </div>
 										<!-- Child comment 1-->
@@ -137,7 +137,7 @@
                     <!-- Side widget-->
                     <div class="card mb-4">
                         <div class="card-header">Metro</div>
-						<div><img class="img-fluid rounded mb-4 mb-lg-0" src="assets/1.png" alt="..." /></div>
+						<div><img class="img-fluid rounded mb-4 mb-lg-0" src="assets/1.png" alt="..." width="800" ></div>
                         <div class="card-body">鄰近捷運永安市場站
 						<a class="btn btn-primary" href="https://www.metro.taipei/cp.aspx?n=ECEADC266D7120A7">乘車時間</a></div>
                     </div>
